Implemented user password reset functionality

--- a/view/signin/signin.templ
+++ b/view/signin/signin.templ
@@ -29,7 +29,7 @@ templ content(err types.Message, title string) {
               <div class="space-y-2">
                 <div class="flex items-center">
                   <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-white" for="password">Password</label>
-                  <a class="ml-auto inline-block text-sm underline text-gray-300 dark:text-gray-400" href="#" rel="ugc">
+                  <a class="ml-auto inline-block text-sm underline text-gray-300 dark:text-gray-400" href="/forgot-password" rel="ugc">
                     Forgot your password?
                   </a>
                 </div>
