--- a/view/auth/auth.templ
+++ b/view/auth/auth.templ
@@ -11,8 +11,8 @@ templ form(err types.Message, title string) {
           <div class="mx-auto w-full max-w-md space-y-8">
             <header class="text-center">
               <div class="space-y-2">
-                <h1 class="text-3xl font-bold text-white">Sign Up</h1>
-                <p class="text-gray-500 dark:text-gray-400">Enter your email below to login to your account</p>
+                <h1 class="text-3xl font-bold text-white">Set Up Your Account</h1>
+                <p class="text-gray-500 dark:text-gray-400">Enter your information to create a new account</p>
                 switch err.Code {
                     case 0:
                         <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
