--- a/view/signup/signup.templ
+++ b/view/signup/signup.templ
@@ -12,7 +12,7 @@ templ form(err types.Message, title string) {
             <header class="text-center">
               <div class="space-y-2">
                 <h1 class="text-3xl font-bold text-white">Sign Up</h1>
-                <p class="text-gray-500 dark:text-gray-400">Enter your email below to login to your account</p>
+                <p class="text-gray-500 dark:text-gray-400">Enter your information to create an account</p>
                 switch err.Code {
                     case 0:
                         <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
