--- a/view/auth/auth.templ
+++ b/view/auth/auth.templ
@@ -16,11 +16,11 @@ templ form(err types.Message, title string) {
                 switch err.Code {
                     case 0:
                         <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
-                          <span class="font-medium">Danger alert!</span> {err.Message}
+                          {err.Message}
                         </div>
                     case 1:
                         <div class="p-4 mb-4 text-sm text-green-800 rounded-lg bg-green-50 dark:bg-gray-800 dark:text-green-400" role="alert">
-                          <span class="font-medium">Success alert!</span> {err.Message}
+                          {err.Message}
                         </div>
                 }
               </div>
