--- a/view/forgotPassword/forgotPassword.templ
+++ b/view/forgotPassword/forgotPassword.templ
@@ -16,7 +16,7 @@ templ content(title string, err types.Message) {
                 switch err.Code {
                     case 0:
                         <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
-                          <span class="font-medium">Danger alert!</span> {err.Message}
+                          {err.Message}
                         </div>
                 }
               </div>
@@ -50,7 +50,7 @@ templ NewPasswordForm(title string, err types.Message) {
                 switch err.Code {
                     case 0:
                         <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
-                          <span class="font-medium">Danger alert!</span> {err.Message}
+                          {err.Message}
                         </div>
                 }
               </div>
