--- a/view/signin/signin.templ
+++ b/view/signin/signin.templ
@@ -16,7 +16,7 @@ templ content(err types.Message, title string) {
                 switch err.Code {
                     case 0:
                         <div class="p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
-                          <span class="font-medium">Danger alert!</span> {err.Message}
+                          {err.Message}
                         </div>
                 }
               </div>
