--- a/view/layout/base.templ
+++ b/view/layout/base.templ
@@ -9,7 +9,7 @@ templ Base(title string){
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Store, share, and access your files securely with our file hosting service. Upload, organize, and share documents, images, videos, and more with ease. Sign up now for secure and reliable file hosting." />
-        <meta name="keywords" content="file hosting, file sharing, cloud storage, data storage, secure file hosting" />
+        <meta name="keywords" content="file hosting, file sharing, cloud storage, data storage, secure file hosting, filekeeper, drive, mega" />
         <meta name="author" content="Filekeeper" />
         <link href="/public/output.css" rel="stylesheet"/>
         <title>{ title }</title>
