Improving pages title

--- a/view/index/index.templ
+++ b/view/index/index.templ
@@ -10,7 +10,7 @@ templ content(title string, user types.User) {
     <div class="bg-white">
         @layout.Navbar(user)
         <main class="container mx-auto px-6 py-16 text-center">
-            <h1 class="text-5xl font-bold text-gray-900 mb-2">Your files, always within reach.</h1>
+            <h1 class="text-5xl font-bold text-gray-900 mb-2">Your files, always within reach</h1>
             <p class="text-gray-700 text-lg mb-8">
                 Store, access, and share your files from anywhere. We offer secure and reliable file storage, so you can
                 focus on what matters most.
