--- a/view/error/error.templ
+++ b/view/error/error.templ
@@ -38,7 +38,7 @@ templ InternalServerError(title string){
     @layout.Base(title){
     <main class="container mx-auto px-4 md:px-6">
         <div class="flex h-screen w-full flex-col items-center justify-center bg-white">
-        <image class="w-32 md:w-64 lg:w-128" src="/public/InternalServerErrorIcon.svg" alt="brand image" />
+        <image class="w-32 md:w-64 lg:w-128" src="/public/InternalServerErrorIcon.svg" alt="Cute Icon" />
           <div class="mx-auto max-w-md space-y-4 text-center">
             <h1 class="text-4xl font-bold tracking-tight text-gray-900">Oops! Something went wrong.</h1>
             <p class="text-gray-500">
