--- a/view/upload/upload.templ
+++ b/view/upload/upload.templ
@@ -18,14 +18,10 @@ templ content(title string) {
                                             stroke-width="2"
                                             d="M13 13h3a3 3 0 0 0 0-6h-.025A5.56 5.56 0 0 0 16 6.5 5.5 5.5 0 0 0 5.207 5.021C5.137 5.017 5.071 5 5 5a4 4 0 0 0 0 8h2.167M10 15V6m0 0L8 8m2-2 2 2" />
                                     </svg>
-                                    <p class="mb-2 text-sm text-gray-400"><span
-                                            class="font-semibold">Click to upload</span> or drag and drop</p>
-                                    <p class="text-xs text-gray-400">SVG, PNG, JPG or GIF (MAX.
-                                        800x400px)</p>
+                                    <p class="mb-2 text-sm text-gray-400 font-semibold">Click to upload or drag and drop</p>
                                 </div>
                                 <input id="dropzone-file" type="file" class="hidden" />
                             </label>
-
                         </div>
                         <div>
                             <div hidden>
