--- a/view/error/error.templ
+++ b/view/error/error.templ
@@ -13,7 +13,7 @@ templ NotFound(title string){
            </div>
            <a
               class="inline-flex h-10 items-center rounded-md border border-gray-200 border-gray-200 bg-white px-8 text-sm font-medium shadow-sm gap-2 transition-colors hover:bg-gray-100 hover:text-gray-900 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950"
-              href="/"
+              href="/" hx-get="/" hx-swap="outerHTML" hx-push-url="true" hx-target="#content"
               >
               <svg
                  xmlns="http://www.w3.org/2000/svg"
@@ -47,7 +47,7 @@ templ InternalServerError(title string){
             <div class="grid gap-2">
               <a
                 class="inline-flex h-10 items-center justify-center rounded-md bg-gray-900 px-6 text-sm font-medium text-gray-50 shadow transition-colors hover:bg-gray-900/90 focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-gray-950 disabled:pointer-events-none disabled:opacity-50"
-                href="/"
+                href="/" hx-get="/" hx-swap="outerHTML" hx-push-url="true" hx-target="#content"
               >
                 Go back to homepage
               </a>
