--- a/view/signin/signin.templ
+++ b/view/signin/signin.templ
@@ -29,7 +29,7 @@ templ content(err types.Message, title string) {
               <div class="space-y-2">
                 <div class="flex items-center">
                   <label class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-white" for="password">Password</label>
-                  <a class="ml-auto inline-block text-sm underline text-gray-300 dark:text-gray-400" href="/forgot-password" rel="ugc">
+                  <a class="ml-auto inline-block text-sm underline text-gray-300 dark:text-gray-400" href="/forgot-password" rel="ugc" hx-get="/forgot-password" hx-swap="outerHTML" hx-push-url="true" hx-target="#content">
                     Forgot your password?
                   </a>
                 </div>
@@ -52,7 +52,7 @@ templ content(err types.Message, title string) {
             </a>
             <div class="text-center text-sm text-white">
               Don't have an account?
-              <a class="underline" href="/signup" rel="ugc">
+              <a class="underline" href="/signup" rel="ugc" hx-get="/signup" hx-swap="outerHTML" hx-push-url="true" hx-target="#content">
                 Sign up
               </a>
             </div>
