--- a/view/layout/base.templ
+++ b/view/layout/base.templ
@@ -13,9 +13,12 @@ templ Base(title string){
         <meta name="author" content="Filekeeper" />
         <link href="/public/output.css" rel="stylesheet"/>
         <title>{ title }</title>
+        <script src="https://unpkg.com/htmx.org@1.9.12"></script>
     </head>
     <body>
-        { children... }
+        <div id="content">
+            { children... }
+        </div>
     </body>
     </html>
 }
@@ -70,10 +73,10 @@ templ Navbar(user types.User) {
                 </div>
             </div>
             } else {
-            <a href="/signup" class="text-gray-600 hover:text-gray-800">
+            <a href="/signup" class="text-gray-600 hover:text-gray-800" hx-get="/signup" hx-swap="outerHTML" hx-push-url="true" hx-target="#content">
                 Sign up
             </a>
-            <a href="/signin" class="text-gray-600 hover:text-gray-800">
+            <a href="/signin" class="text-gray-600 hover:text-gray-800" hx-get="/signin" hx-swap="outerHTML" hx-push-url="true" hx-target="#content">
                 Sign in
             </a>
             }
